--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -14,6 +14,14 @@ jobs:
        contents: read
        packages: write
      steps:
+     - name: Checkout
+       uses: actions/checkout@v2
+     - name: Set up JDK 11.0.2
+       uses: actions/setup-java@v1
+       with:
+         java-version: 11.0.2
+     - name: Build with Maven
+       run: mvn -B package -Pnative --file pom.xml
      - name: Teste Jfrog
        uses: jfrog/setup-jfrog-cli@v2
      - run: jf --version
