--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -21,7 +21,7 @@ jobs:
        with:
          java-version: 11.0.2
      - name: Build with Maven
-       run: mvn -B package -Pnative --file pom.xml
+       run: mvn -B package --file pom.xml
      - name: Teste Jfrog
        uses: jfrog/setup-jfrog-cli@v2
      - run: jf --version
