--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -27,7 +27,7 @@ jobs:
        env:
          JF_ENV_1: ${{ secrets.JF_SECRET_ENV_1 }}
      - run: |
-         jf c use ${{ secrets.JF_SECRET_ENV_1 }}
+         jf c use local-1
          jf rt ping
 #     steps:
 #     - uses: actions/checkout@v3
