--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -25,7 +25,7 @@ jobs:
      - name: Teste Jfrog
        uses: jfrog/setup-jfrog-cli@v2
        env:
-         JF_ENV_1: ${{ secrets.JF_SECRET_ENV_1 }}
+         JF_ENV_1: ${{ secrets.JF_SECRET_ENV }}
      - run: |
          jf rt ping --url ${{ secrets.JF_SECRET_ENV }}
 #     steps:
